gcc/testsuite/g++.dg/other/crash-1.C

void f() { return 0; }          // { dg-error "return-statement" }

